# RustAPI

./: .env.develop  .env.prod  .env.staging  Cargo.toml  README.md
bins/Api/: Cargo.toml
bins/Api/src/: main.rs
bins/Api/src/docs/: open_api.rs
bins/Api/src/middlewares/: logger.rs  mod.rs  validate.rs
bins/Api/src/resources/users/: controllers.rs  docs.rs  mod.rs  routes.rs  services.rs  traits.rs
bins/Api/src/resources/users/models/: mod.rs
bins/migrations/: Cargo.toml
bins/migrations/src/: main.rs
bins/migrations/src/migrations/: 01_initialize_database_up.sql
commons/: Cargo.toml
commons/src/: error.rs
infrastructure/: Cargo.toml
infrastructure/src/: environment.rs  lib.rs  logger.rs  models.rs  postgres.rs
models/: Cargo.toml
models/src/users/: mod.rs  user_create.rs  user_database.rs
repositories/: Cargo.toml
repositories/src/users/: mod.rs  traits.rs  users.rs
src/: main.rs
src/docs/: mod.rs  open_api.rs
src/errors/: custom_error.rs  mod.rs
src/infrastructure/: environment.rs  logger.rs  mod.rs
src/middlewares/: mod.rs  validate.rs
src/models/: users.rs
src/resources/users/: controllers.rs  docs.rs  mod.rs  models.rs  repository.rs  routes.rs  services.rs
src/routes/: users.rs
