[package]
name = "RustAPI"
version = "0.1.0"
edition = "2021"

[dependencies]
validator = { version = "0.19.0", features = ['derive'] }
serde = { version = "1.0.0", features = ["derive"] }
actix-web = "4.9.0"
axum = "0.7.9"
dotenv = "0.15.0"
futures-util = "0.3.31"
serde_json = "1.0.133"
thiserror = "2.0.7"
tokio = "1.42.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.11.0"

futures = "0.3.31"
