[workspace]
resolver = "2"

members = ["repositories", "models", "infrastructure", "commons", "bins/*"]

default-members = ["bins/*"]

[workspace.dependencies]
validator = { version = "0.19.0", features = ['derive'] }
serde = { version = "1.0.0", features = ["derive"] }
actix-web = "4.9.0"
axum = "0.7.9"
dotenv = "0.15.0"
futures-util = "0.3.31"
serde_json = "1.0.133"
thiserror = "2.0.7"
tokio = { version = "1.42.0" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
utoipa = "5.2.0"
utoipa-swagger-ui = { version = "8.0.3", features = [
    "actix-web",
    "debug-embed",
] }
sqlx = { version = "0.8.2" }
sqlx-cli = { version = "0.8.2" }
async-trait = { version = "0.1.83" }
uuid = { version = "1.11.0" }
chrono = { version = "0.4.39" }
