[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
validator = { workspace = true }
utoipa = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["uuid"] }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
