[package]
name = "repositories"
version = "0.1.0"
edition = "2021"

[dependencies]
commons = { path = "../commons" }
models = { path = "../models" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait = { workspace = true }
