[package]
name = "API"
version = "0.1.0"
edition = "2021"

[dependencies]
infrastructure = { path = "../../infrastructure" }

validator = { workspace = true, features = ['derive'] }
serde = { workspace = true, features = ["derive"] }
actix-web = { workspace = true }
axum = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

futures = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = [
    "actix-web",
    "debug-embed",
] }
